[package]
name = "edi-cli"
version = "0.2.1"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
keywords = ["edi","x12","edifact"]
repository = "https://github.com/apimeister/edi-cli/"
documentation = "https://docs.rs/edi-cli/"
description = "CLI tool for working with EDI files."

[[bin]]
name = "edi"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_x12 = { version = "0.7" }
# serde_x12 = { path = "../serde_x12" }
x12-types = "0.7"
# x12-types = { path = "../x12-types" }
serde_edifact = "0.3"
edifact-types = "0.3"
clap = "4"
regex = "1"
serde_json = "1"
encoding_rs = "0.8"
lazy_static = "1.4"