[package]
name = "edi-cli"
version = "0.3.0"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
keywords = ["edi","x12","edifact"]
repository = "https://github.com/apimeister/edi-cli/"
documentation = "https://docs.rs/edi-cli/"
description = "CLI tool for working with EDI files."

[[bin]]
name = "edi"
path = "src/main.rs"

[dependencies]
clap = "4"
regex = "1"
serde_json = "1"
encoding_rs = "0.8"
lazy_static = "1.4"
edifact-types = { version = "*" }
x12-types = { version = "*" }